# lisum-bot

./: .env.dist  .gitignore  Dockerfile  README.md  db.sqlite3-shm  db.sqlite3-wal  docker-compose.yml  pyproject.toml  start
lisum_bot/: __main__.py  config.py  exceptions.py  lisum.py  loader.py  states.py
lisum_bot/routers/: __init__.py  chat.py
tele_gpt/: gpt.py  start.py
tests/: test_lisum.py
